--- a/index.css
+++ b/index.css
@@ -10,22 +10,33 @@ body {
 main {	
 	width: 600px;
 	margin: auto;
-	padding-left: 20px;
-	padding-bottom: 20px;
-	background-color: white;
-	border: 3px solid #666666;
-	border-radius:3px;
+	padding: 5px 15px 25px 15px;
+	background-color: #f7f5ea;
+  border: 3px solid #666666;
+  border-radius: 10px;
+}
+
+h1 {
+    text-align: left;
+    border-bottom: 1px solid #999;
+ }   
+
+.splash {
+    width: 100%;
+    height: 215px;
+    background-color: black;
 }
 
 .intro-splash {
-    margin-top: 5px;
+    display: block;
+    margin: auto;
 }
 
 .answer {
 	display: list-item;
 	list-style-type: none;
-	background-color: white;
-    padding: 7px;
+	background-color: transparent;
+  padding: 8px;
 }
 
 .current-score{
