--- a/index.css
+++ b/index.css
@@ -16,6 +16,10 @@ main {
   border-radius: 10px;
 }
 
+.quiz-intro {
+    text-align: center;
+}
+
 h1 {
     text-align: left;
     border-bottom: 1px solid #999;
@@ -51,7 +55,6 @@ h1 {
   font-family: 'IM Fell DW Pica', serif;
   color: white;
   background-color: #8b0736;
-  text-align: center;
   font-size: 14px;
   padding: 8px 12px;
   border-radius: 20px;
@@ -62,9 +65,13 @@ h1 {
 }
 
 #start-quiz-over {
-  background-color: orangered;
+  font-family: 'IM Fell DW Pica', serif;
+  color: white;
+  background-color: #8b0736;
+  font-size: 14px;
+  padding: 8px 12px;
+  border-radius: 20px;
   margin: 0 auto 0 auto;
-
 }
 
 #submit-answer {
@@ -79,13 +86,13 @@ h1 {
   border-radius: 15px; 
 }
 
-#start-quiz-over {
+/*#start-quiz-over {
   display:none;
-/*  font-family: 'IM Fell DW Pica', serif;
+  font-family: 'IM Fell DW Pica', serif;
   background-color: orange;
-  margin: 0 auto 0 auto;*/
+  margin: 0 auto 0 auto;
 
-}
+}*/
 
 .popup-inner img {
   display: block;
@@ -94,7 +101,7 @@ h1 {
   max-height:100%;
 }
 
-/* Outer */
+/* Outer modal*/
 .popup {
     width:100%;
     height:100%;
@@ -105,7 +112,7 @@ h1 {
     background:rgba(0,0,0,0.75);
 }
 
-/* Inner */
+/* Inner modal*/
 .popup-inner {
     max-width:700px;
     width:90%;
@@ -141,7 +148,7 @@ h1 {
     color:#fff;
 }
 
-/*MOBILE STYLES*/
+/* Media query */
 @media only screen and (max-width: 640px) {
   .quiz-card {
     width: 100%;
