--- a/index.css
+++ b/index.css
@@ -51,6 +51,12 @@ h1 {
   display: none;
 }
 
+#correctTrack {
+  margin-left: 13px;
+  margin-top: 16px;
+  color: #484848;
+}
+
 #start-quiz {
   font-family: 'IM Fell DW Pica', serif;
   color: white;
